:bug: updated container overflow for results

--- a/src/styles/styles.scss
+++ b/src/styles/styles.scss
@@ -525,7 +525,7 @@ body {
   display: flex;
   flex-flow: row;
 
-  justify-content: space-evenly;
+  justify-content: center;
   width: 100%;
   position: fixed;
   top: 224px;
@@ -715,8 +715,7 @@ body {
 // ========================
 
 .results__wrapper {
-  overflow: hidden;
-  overflow-y: scroll;
+  
   height: 100vh;
 }
 
@@ -740,6 +739,11 @@ body {
   @media (max-width: 640px) {
     width: 96%;
     margin: 0 auto;
+    position: absolute;
+
+    &:nth-of-type(1){
+      top: 70px;
+    }
   }
 }
 
@@ -875,7 +879,7 @@ body {
     transform: translate(-51%, 0%);
 
     @media (max-width: 1024px) {
-      transform: translate(0, 0);
+      transform: translate(-1%, 0);
     }
 
     // end intialtransform/location
